# compression

./: .gitignore  .travis.yml  CMakeLists.txt  Guide.md  README.md  main.cpp
cmake/: functions.cmake
codec/: codec.h
common/: defs.h  utils.cpp  utils.h
huffman/: bitstream.cpp  bitstream.h  codec.h  huffman.cpp  huffman.h  tree.cpp  tree.h  utils.cpp  utils.h
lib/: CMakeLists.txt
lib/BWT/: BWT.cpp  BWT.h  algo.h
lib/codec/: codec.h  multi_codec.cpp  multi_codec.h
lib/common/: defs.h  utils.cpp  utils.h
lib/freq/: freq.cpp  freq.h  trie.cpp  trie.h
lib/huffman/: huffman.cpp  huffman.h  tree.cpp  tree.h
lib/mixed/: freq.cpp  huffman.h  mixed.cpp  mixed.h  tree.cpp  tree.h  trie.cpp  trie.h
lib/rm_fr/: rm_fr.h  trie.cpp  trie.h
lib/trivial/: trivial.cpp  trivial.h
stream_tester/: CMakeLists.txt  help.h  main.cpp  stream_tester.cpp  stream_tester.h
tester/: CMakeLists.txt  config.cpp  config.h  main.cpp  stopwatch.h  tester.conf  tester.cpp  tester.h
testers/: CMakeLists.txt  args_helper.cpp  args_helper.h  help.h  reader.h  stopwatch.h
testers/main_tester/: CMakeLists.txt  main.cpp  tester.cpp  tester.h
testers/stream_tester/: CMakeLists.txt  main.cpp  stream_tester.cpp  stream_tester.h
